# ERPNext-MCP

./: .env.example  .gitignore  DEPLOYMENT_AZURE_FUNCTIONS.md  README.md  manifest.json  pyproject.toml  requirements.txt
docs/: financial-reports.md
erpnext_mcp/: __init__.py  config.py  server.py
erpnext_mcp/client/: frappe_client.py
erpnext_mcp/domains/: accounting.py  assets.py  crm.py  hr.py  inventory.py  manufacturing.py  projects.py  purchasing.py  sales.py  support.py  utilities.py
erpnext_mcp/utils/: doctype_mapping.py  error_handling.py
examples/: financial_reports_demo.py  usage_example.py
tests/: test_basic.py  test_financial_reports.py
