[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext-mcp"
version = "0.1.0"
description = "Comprehensive Python MCP server exposing ERPNext operations in business terms"
authors = [
    {name = "ASI Saga", email = "contact@asisaga.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["erpnext", "frappe", "mcp", "erp", "business"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "frappe-client>=0.1.0",
    "mcp>=1.14.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.35.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ASISaga/ERPNext-MCP"
Repository = "https://github.com/ASISaga/ERPNext-MCP"
Documentation = "https://github.com/ASISaga/ERPNext-MCP#readme"

[project.scripts]
erpnext-mcp = "erpnext_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["erpnext_mcp*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true